--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: zenith
 */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap');
+
+:root {
+    --main-color: rgb(76, 23, 173);
+}
 
 body {
     font-family: 'Poppins', sans-serif !important;
@@ -24,6 +29,7 @@ header {
 .navbar-brand {
     font-weight: bold;
     font-size: 1.5rem !important;
+    color: var(--main-color) !important;
 }
 
 .navbar-collapse {
@@ -35,6 +41,31 @@ header {
     margin-right: 1rem;
     font-size: 14px !important;
     text-transform: uppercase;
+    position: relative;
+}
+
+.nav-link::after {
+    content: "";
+    background-color: black;
+    position: absolute;
+    bottom: 4px;
+    left: 0;
+    height: 1px;
+    width: 100%;
+    transform: scale(0);
+    transition: all .5s;
+    transform-origin: left right;
+    opacity: 0;
+}
+
+.nav-link:hover::after {
+    transform: scale(1);
+    opacity: 1;
+}
+
+.active {
+    color: var(--main-color) !important;
+    position: relative !important;
 }
 
 .hero-section {
@@ -49,7 +80,20 @@ header {
 .hero-section_overlay {
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+.hero-section_left-panel {
+    height: 100%;
+    position: absolute;
+}
+
+.hero-section_left-panel p {
+    /*font-family: 'Playfair Display', serif;*/
+    font-size: 6.5rem;
+    color: white;
+    font-weight: bold;
+    margin-top: 100%;
 }
 
 .blog-section {
