--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ Text Domain: zenith
 :root {
     --main-color: rgb(76, 23, 173);
     --sec-color: #1A181B;
+    --site-gray: rgb(68, 68, 68);
 }
 
 a {
@@ -267,6 +268,67 @@ header {
 
 .singe-post_content--main {
     padding: 35px 0;
+}
+
+.our-team {
+    height: 600px;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.member {
+    width: 350px;
+    max-height: 650px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 20px;
+    margin: 20px;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 60px 40px -7px;
+}
+
+.member-photo {
+    object-fit: cover;
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    margin-bottom: 15px;
+}
+
+.member-description {
+    text-align: center;
+}
+
+.member-meta {
+    width: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+}
+
+.member-meta>button {
+    width: 150px;
+    height: 40px;
+    border: none;
+    background-color: black;
+    color: white;
+    border-radius: 3px;
+}
+
+.member-meta>a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    color: black;
+    text-decoration: none;
+    font-size: 35px;
+    margin-left: 8px;
 }
 
 @media screen and (max-width:875px) {
